--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ papi-4.1.0.tar.gz
 /papi-5.2.0-2.37.g5c1405a.tar.gz
 /papi-5.2.0-2.63.g91a6fa5.tar.gz
 /papi-5.2.0-2.1.gff3e15d.tar.gz
+/papi-5.3.0.tar.gz
